# snap-sync-cleanup

./: LICENSE  README.md  pyproject.toml
snap-sync-cleanup/: snap-sync-cleanup.py
snap_sync_cleanup/: snap_sync_cleanup.py
