[tool.poetry]
name = "snap-sync-cleanup"
version = "1.1.1"
description = "Cleans up remote backups created by snap-sync."
authors = ["Christopher Tam <ohgodtamit@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/GodTamIt/snap-sync-cleanup"

packages = [
    { include = "snap_sync_cleanup" }
]

[tool.poetry.dependencies]
python = "^3.6"
colorlog = { version = "^6.6.0", optional = true }

[tool.poetry.scripts]
snap-sync-cleanup = "snap_sync_cleanup.snap_sync_cleanup:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
